fix (: fix main overlap to bg green)

--- a/css/style.css
+++ b/css/style.css
@@ -10,32 +10,39 @@
 
 /* regole sezione'header */
 header {
+    position: relative;
     background-color: #009688;
-    height: 70px;
-    z-index: -1;
+    height: 150px;
+    padding: 20px;
+    z-index: 1;
 }
 
 /* regole sezione main */
 main {
-    background-color: #DBDBD3;
-    height: 100vh;
+   
+    position: absolute;
+    width: 80%;
+    max-height: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: -30px;
-    z-index: 1;
+    top: 10%;
+    left: 9%;
+    margin-left: 2;
+    margin-top: 110px;
+    z-index: 2;
 }
+
 
 /* regole contenitore app */
 #app {
     display: flex;
-    width: 80%;
-    height: 85%;
+    width: 100vw;
+  
 }
 
 /* Stile della sidebar */
 .sidebar {
-    width: 30%;
     background-color: #eaeaea;
     display: flex;
     flex-direction: column;
